# LyingDown

./: .gitignore  README.md  Tool.sh  Tools.py  app.py  build.sh  main.py  mouse_control.py  pyproject.toml  screen_camera.py  test.py
lyingdown/: main.py  screen_camera.py
lyingdown/personal_usage/: keyboard_control_mouse.py
lyingdown/templates/: index.html
personal_usage/: main.py
templates/: index.html
